--- a/index.html
+++ b/index.html
@@ -489,22 +489,22 @@ rrently working with us to implement our algorithm.
 
 						      <div class="card">
 						        <div class="card-header">
-										<a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">Don't people know if someone is suicidal? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo"> Don't people know if someone is suicidal? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menutwo" class="collapse">
 						          <div class="card-body">
-												<p>It might be possible to tell that someone is upset or even depressed, but it is incredibly difficult to determine if someone has suicidal tendancies as a person. It is possible to tell based on their messages and their phrases, which means using our algorithm is the best way to distinctively tell if someone is suicidal or not. </p>
+												<p>It might be possible to tell that someone is upset or even depressed, but it is incredibly difficult to determine if someone has suicidal tendencies as a person. It is possible to tell based on their messages and their phrases, which means using our algorithm is an efficient way to tell if someone is suicidal or not. Determining fine lines and patterns in text is a task best dealt with AI. </p>
 						          </div>
 						        </div>
 						      </div>
 
 						      <div class="card">
 						        <div class="card-header">
-										<a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3">Who is this site specifically meant for? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3"> Why is our solution better than existing ones? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu3" class="collapse">
 						          <div class="card-body">
-												<p>This site is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic. </p>
+												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a comprehensive step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages. </p>
 						          </div>
 						        </div>
 						      </div>
@@ -513,12 +513,11 @@ rrently working with us to implement our algorithm.
     						<div class="col-md-6">
     							<div class="card">
 						        <div class="card-header">
-										<a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the application? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4"> Who is this application specifically meant for? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>Our application allows you to effectively screen and determine whether your loved one is depressed of suicidal. To begin, you can upload texts and messages from your friend to our model, which will provide a preliminary diagnosis on whether they are depressed or suicidal.
-                          To receive a more accurate diagnosis, you can provide previous messages before a change in mood or tone was noticed, and our model can then more accurately determine the progression of their depression. You can also use our questionnaire based analysis for more familiar diagnosis.
+												<p>This application is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic.
 </p>
 						          </div>
 						        </div>
@@ -526,11 +525,11 @@ rrently working with us to implement our algorithm.
 
 						      <div class="card">
 						        <div class="card-header">
-										<a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5">Why is our site better than existing models? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5"> Why is SuiSense a credible solution? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu5" class="collapse">
 						          <div class="card-body">
-												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a comprehensive step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages.</p>
+												<p>SuiSense is not a therapist and does not intend to replace therapists. SuiSense is simply an early screening process that utilizes AI to prepare initial analysis. We recommend taking the results to a real therapist to get formal professional care for your loved one. Most importantly, our therapists have confirmed that the process is effective. Using text to analyze current and previous sentiment in patients is incredibly effective in determining whether a patient is suicidal or depressed, meaning our solution is great for initial screening.</p>
 						          </div>
 						        </div>
 						      </div>
