--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@ left: 33%;
   <div class="container">
     <div class='row'>
       <div class="col-md-6 ftco-animate">
-        <img src="images/therapist.jpg" class="img-fluid" alt="">
+        <img src="images/ourMission.png" class="img-fluid" alt="">
         <div class="heading-section ftco-animate mt-5">
           <h2 class="mb-4">Our Mission</h2>
-          <p>We are an initial screening service that efficiently helps concerned friends and family recognize depressed and suicidal tendencies in their loved ones. Using Artificial Intelligence and Natural Language Processing, we build on existing products to come up with a unique and unprecedented solution to this pressing issue.</p>
-        </div>
+          <p>
+            We are an initial screening service that efficiently helps concerned friends and family recognize depressed and suicidal tendencies in their loved ones. Using Artificial Intelligence and Natural Language Processing, we build on existing products to come up with a unique and unprecedented solution to this pressing issue.
+          </p>
+          </div>
       </div>
     <div class="col-md-3 ftco-animate">
       <div class="media block-6 services border text-left">
@@ -108,8 +110,12 @@ left: 33%;
           <span class="flaticon-cloud-computing"></span>
         </div>
         <div class="mt-3 media-body media-body-2">
-          <h3 class="heading">The Importance</h3>
-          <p>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</p>
+          <center>
+          <h3 class="heading">Friends and Family</h3>
+        </center>
+          <p>
+            Those with mental struggles tend to first open up to trusted friends and family. These people can express themselves to loved ones rather than online robots or public social media, which makes them more successful in combating depressive and suicidal tendencies. As communication is increasingly online, SuiSense strives to help you understand your loved one’s mental state and recognize possible flags through online phrases and texts.
+          </p>
         </div>
       </div>
     </div>
@@ -119,8 +125,12 @@ left: 33%;
           <span class="flaticon-cloud"></span>
         </div>
         <div class="mt-3 media-body media-body-2">
+          <center>
           <h3 class="heading">Depression vs Suicide</h3>
-          <p> Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+          </center>
+          <p>
+            While depression and suicide are interconnected, recognizing and treating each have significant differences. SuiSense is able to efficiently differentiate depressive ideations from suicidal tendencies, which can lead individuals to get psychologists who understand how to most effectively approach treatment. In addition, our product helps family and friends understand more clearly what their loved one is going through.
+          </p>
         </div>
       </div>
     </div>
@@ -132,9 +142,14 @@ left: 33%;
             <span class="flaticon-server"></span>
           </div>
           <div class="mt-6 media-body media-body-2">
-            <h3 class="heading">Friends and Family</h3>
-            <p>People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. Since all interactions are happening online, understanding your friend's mental health through interactions, so understanding their phrases and texts is the best way to understand their mental state.</p>
-          </div>
+            <br>
+            <center>
+            <h3 class="heading">COVID-19 Pandemic</h3>
+          </center>
+            <p>
+              COVID-19 has created countless additional problems in our lives, and many of the pressing concerns have been addressed in some way. However, not many solutions have addressed the impact of COVID on mental health. Depressed and suicidal individuals must deal with health problems, employment issues, and social isolation on top of their already fractured mental health. Depression and suicide have increasingly marginalized those struggling with mental health; in the Bay Area, we have seen more deaths from suicides than COVID-19 during quarantine. We aim to alleviate some of these struggles through SuiSense.
+            </p>
+            </div>
         </div>
       </div>
       <div class="col-md-6 ftco-animate">
@@ -143,8 +158,13 @@ left: 33%;
             <span class="flaticon-customer-service"></span>
           </div>
           <div class="mt-6 media-body media-body-2">
-            <h3 class="heading">Early Detection</h3>
-            <p>It is very important that messages hinting at suicidal intentions are recognized right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression. Especially due to COVID since hospitals and doctors are overloaded, people can't get the support that they need. Thus, having early detection online is the best way to help these people. </p>
+            <br>
+            <center>
+            <h3 class="heading">Community and Outreach</h3>
+          </center>
+            <p>
+              To have a strong community presence, we believe partnering with organizations and therapists can make our solution as precise and effective as possible. Through the help of certified therapists from the Bay Area, we have been able to tailor our solution to help those suffering from mental health issues in the most effective and unique ways possible. Through partnerships with organizations, we have been able to promote our solution and begin the implementation process. We aim to create a community where individuals are not afraid to reach out and gain support for their mental struggles.
+            </p>
           </div>
         </div>
       </div>
@@ -289,14 +309,15 @@ left: 33%;
 		              </div>
 		            </div>
     					</div>
-    					<div class="col-md-6 ftco-animate">
+
+              <div class="col-md-6 ftco-animate">
     						<div class="media block-6 services border text-left">
 		            	<div class="icon d-flex align-items-center justify-content-center">
 		            		<span class="flaticon-server"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Stage Progresion</h3>
-		                <p>Our progression model which classifies the patient into one of 6 different categories based on Jessie Bering's classification which gives a more specific diagnosis for the patient. By intaking multiple messages, we are able to determine which stage a patient is on based on a standard and commonly used scale.</p>
+		                <p>Our progression model which classifies the patient into one of 6 different categories based on Jessie Bering's classification which gives a more specific diagnosis for the patient. By intaking multiple messages, we are able to determine which stage a patient is on with a psychologist-certified scale.</p>
 		              </div>
 		            </div>
     					</div>
@@ -337,9 +358,14 @@ left: 33%;
             </p>
           </div>
         </div>
+
+        <style>
+        </style>
+
         <div class="row">
-          <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+          <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
             <div clvass="ftco-staff">
+              <br>
               <img src="images/drmarcille.png" width ="50%"alt="Template">
               <br>
               <br>
@@ -350,15 +376,18 @@ left: 33%;
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+
+            <div class="col-md-2 col-sm-2">
+            </div>
+            <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
               <div class="ftco-staff">
+                <br>
                 <img src="images/drruebsamen.png" width="50%"alt="Template">
                 <br>
                 <br>
                 <h3><a>Advisor: </a><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
                 <strong class="role">Psychologist, PhD, Bay Area</strong>
                 <p>Dr. Ruebsamen is a licensed Bay Area psychologist who founded the "Always Be Listening Global Initiative", a global humanitarian psychological project working with adolescents and families. She is also part of Abbey Blue Canoe Open Path Collective, a United Nations organization for uprooted children. As our advisor, Dr. Ruebsamen helped us identify our target group, refine our process to be as effective as possible, and improve outreach and implementation. In addition, she is connecting us with potential users and assisting us in implementing our algorithm.
-rrently working with us to implement our algorithm.
                 </p>
 
               </div>
@@ -377,18 +406,22 @@ rrently working with us to implement our algorithm.
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
-              <div clvass="ftco-staff">
+            <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <br>
                 <img src="images/capalogo.png" width ="73%"alt="Template">
                 <br>
                 <br>
-                <h3><a href="https://capmovement.org/" style="font-size: 25px;">Children's Addiction Prevention Association</a></h3>
-                  <p>The Children's Addiction Prevention Association (CAPA) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
+                <h3><a href="https://capmovement.org/" >CAP Association</a></h3>
+                  <p>The Children's Addiction Prevention Association (CAP Association) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
                   </p>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+              <div class='col-md-2 col-sm-2'>
+              </div>
+              <div class="col-md-5 col-sm-5 text-center animate-box border" data-animate-effect="fadeIn">
                 <div class="ftco-staff">
+                  <br>
                   <img src="images/mhilogo.png" width="30%"alt="Template">
                   <br>
                   <br>
