--- a/analysis2.html
+++ b/analysis2.html
@@ -100,7 +100,7 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Baseline Screening</h2>
-        <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone. This screening will determine whether your loved one is likely depressed or suicidal. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
+        <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone. This screening will determine whether your loved one is likely depressed or suicidal.</p>
         <hr>
         </center>
       </div>
@@ -128,7 +128,6 @@ left: 33%;
       <div class="row justify-content-center mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
-            <span><b>NOTE: Page is under serious development. Model and general analysis process are not up to date. Please check back in the future for a fully functional version.</b></span>
             <br><br>
           <h2 class="mb-4">Determine Stage of Depression</h2>
           <p>Finally, please fill out the form below with text that you copied from a message or remembered hearing. We require atleast 3 messages,
