--- a/analysis.html
+++ b/analysis.html
@@ -108,7 +108,7 @@
     </div>
 
 
-  <iframe src="https://suisense.pythonanywhere.com/standard" width="100%" height="900" frameBorder="0"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
 
     </center>
   </section>
