--- a/analysis.html
+++ b/analysis.html
@@ -100,7 +100,7 @@
           <center>
             <br><br>
           <h2 class="mb-4">Initial Screening</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal.</p>
           <hr>
           </center>
         </div>
