Fixed Description Progression

--- a/analysis2.html
+++ b/analysis2.html
@@ -120,7 +120,7 @@ left: 33%;
         <center>
           <br><br>
         <h2 class="mb-4">Progression Model</h2>
-        <p>add a description into here</p>
+        <p>Input Messages from a Loved One in order to Classify Them Into 6 Different Categories of Depression and Suicide Based on Jessie Bering's classification system.</p>
         <hr>
         </center>
       </div>
