made images smaller

--- a/pairings.html
+++ b/pairings.html
@@ -39,10 +39,10 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="analysis.html" class="nav-link">Initial Analysis</a></li>
-            <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
-	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link" style='color: white !important;'>Home</a></li>
+	          <li class="nav-item"><a href="analysis.html" class="nav-link" style='color: white !important;'>Initial Analysis</a></li>
+            <li class="nav-item"><a class="nav-link" href="analysis2.html" style='color: white !important;'>Advanced Analysis</a></li>
+	          <li class="nav-item active"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
 	          <!-- <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li> -->
 	        </ul>
